--- a/docs.html
+++ b/docs.html
@@ -12,8 +12,8 @@
             <li><a href="#" class="s-box-heading"> <span class="fa fa-book"></span> Start.css</a></li>
             <li class="s-dropdown"><a href="#">Menu</a>
               <ul>
-                <li><a href="sandbox.html">Sandbox</a></li>
-                <li><a href="index.html">Docs</a></li>
+                <li><a href="index.html">Sandbox</a></li>
+                <li><a href="docs.html">Docs</a></li>
               </ul>
             </li>
           </ul>
@@ -128,6 +128,17 @@
 &lt;p class=&quot;s-violet&quot;&gt;Submit&lt;/p&gt;</pre>
             <p>By itself, this class will do nothing, but other elements will recognize these and apply their own respective theming.  </p>
             <p>For example, .s-green on a button will make a green background with white text, but .s-green on a p or span will make the color green, but not the background.</p>
+            <h2 id="endconcat">End Concatenation</h2>
+            <p>This is a small trick to prevent the last line of a paragraph from containing only one word.</p>
+            <p>So instead of:</p>
+            <pre>lorem ipsum dolor sit
+amet</pre>
+            <p>End concatenation produces:</p>
+            <pre>lorem ipsum dolor
+sit amet</pre>
+            <p>To use, simply add the class <code>.s-endconcat</code> or use the jQuery plugin</p>
+            <pre>$(element).s_endconcat()</pre>
+            <p>Where <code>element</code> is the element to have enconcatenation applied</p>
             <h2 id="grid">Grid</h2>
             <p>Start uses a 12 column grid. To create a gridded row, start with an <code>.s-row</code> container.</p>
             <pre>&lt;section class=&quot;s-row&quot;&gt;&lt;/section&gt;</pre>
@@ -209,6 +220,9 @@
                 <div class="grid-example s-box">(s-col s-lg-4) easy.</div>
               </div>
             </section>
+            <h3>Container</h3>
+            <p>To contain the page in a nice, centered wrapper, use <code>.s-wrapper</code></p>
+            <p>This will have no effect for pages under 1200px. Screens larger than this will keep your site in a 1200px wrapper with equal spacing on the left and right.</p>
             <h2 id="growls">Growls</h2>
             <p>Growls are unobtrusive pop up messages called via JavaScript. A basic call might look like this:</p>
             <pre>$.sGrowl({
@@ -311,73 +325,15 @@
     &lt;p&gt;Flowers are now on sale. Get your beautiful gift of flowers today. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
   &lt;/div&gt;
 &lt;/div&gt;</pre>
-            <h2 id="modals">Modals</h2>
-            <p>Modals require only one element, making it easy to control with simple jQuery.</p>
-            <div class="s-row">
-              <div class="s-col s-lg-6">
-                <h5>The modal window</h5>
-                <pre>&lt;div class=&quot;s-modal&quot; id=&quot;modal1&quot;&gt;
-  I'm a modal
-&lt;/div&gt;</pre>
-              </div>
-              <div class="s-col s-lg-6">
-                <h5>The button</h5>
-                <pre>&lt;button class=&quot;s-btn s-blue&quot; id=&quot;launch-modal1&quot;&gt;
-  Launch Modal
-&lt;/button&gt;</pre>
-              </div>
-              <div class="s-col">
-                <h5>The jQuery</h5>
-                <pre>$('#launch-modal1').click(function() {
-  $('#modal1').fadeIn('fast')
-})</pre>
-              </div>
-            </div>
-            <p>Remember to use <code>.fadeIn()</code>or <code>.fadeOut()</code></p>
-            <p>
-              <button id="launch-modal1" class="s-btn s-blue">Try it</button>
-            </p>
-            <div id="modal1" class="s-modal">I'm a modal</div>
-            <p>For styling, use semantic HTML5</p>
-            <pre>&lt;div class=&quot;s-modal&quot;&gt;
-  &lt;header&gt;
-    &lt;h5&gt;
-      Modal Title
-      &lt;small&gt;&amp;times;&lt;/small&gt;
-    &lt;/h5&gt;
-  &lt;/header&gt;
-  &lt;main&gt;
-    &lt;p&gt;Modal Body&lt;/p&gt;
-  &lt;/main&gt;
-  &lt;footer class=&quot;s-box&quot;&gt;
-    &lt;ul class=&quot;s-right&quot;&gt;
-      &lt;li&gt;
-        &lt;button class=&quot;s-btn s-blue&quot;&gt;Submit&lt;/button&gt;
-      &lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/footer&gt;
-&lt;/div&gt;</pre>
-            <p>
-              <button id="launch-modal2" class="s-btn s-blue">Try it</button>
-            </p>
-            <div id="modal2" class="s-modal">
-              <header>
-                <h5>I'm a modal<small class="s-close">&times;</small></h5>
-              </header>
-              <main>
-                <p>This is the body</p>
-              </main>
-              <footer class="s-box">
-                <ul class="s-right">
-                  <li>
-                    <button class="s-btn s-blue">Submit</button>
-                  </li>
-                </ul>
-              </footer>
-            </div>
             <h2 id="typography">Typography</h2>
             <p>Typography relies mostly on standard HTML5 elements.</p>
             <p>Use hx (where x = 1-5) for headings and p, etc for basic text formatting.</p>
+            <h1>Heading1</h1>
+            <h2>Heading2</h2>
+            <h3>Heading3</h3>
+            <h4>Heading4</h4>
+            <h5>Heading5</h5>
+            <p> <strong>Strong </strong>and <em>emphatic </em>paragraph with <a href="#">Link</a>.</p>
           </div>
           <div class="s-sm-4 s-lg-3 s-col">
             <div class="s-box s-box_vertical">
@@ -388,24 +344,16 @@
                 <li><a href="#boxes">Boxes</a></li>
                 <li><a href="#browsers">Browser Support</a></li>
                 <li><a href="#colors">Colors</a></li>
+                <li><a href="#endconcat">End Concatenation</a></li>
                 <li><a href="#grid">Grid</a></li>
                 <li><a href="#growls">Growls</a></li>
                 <li><a href="#images">Images</a></li>
-                <li><a href="#modals">Modals</a></li>
                 <li><a href="#typography">Typography</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-      <script>
-        $('#launch-modal1').click(function() {
-          $('#modal1').fadeIn('fast')
-        })
-        $('#launch-modal2').click(function() {
-          $('#modal2').fadeIn('fast')
-        })
-      </script>
     </main>
     <footer></footer>
   </body>
@@ -419,12 +367,4 @@
     }) 
   </script>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  <script>
-    $('#launch-modal1').click(function() {
-      $('#modal1').fadeIn('fast')
-    })
-    $('#launch-modal2').click(function() {
-      $('#modal2').fadeIn('fast')
-    })
-  </script>
 </html>
